--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html>
 <head>
+    <meta name="viewport" value="width=device-width,intial-scale=1">
 </head>
 <body>
+    <div id="app"></div>
     <script src="/styles.bundle.js"></script>
     <script src="/scripts.bundle.js"></script>
 </body>
