--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <meta name="viewport" value="width=device-width,intial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div id="app"></div>
     <script src="/styles.bundle.js"></script>
     <script src="/scripts.bundle.js"></script>
 </body>
-</html>
+</html>`
